--- a/checkout.html
+++ b/checkout.html
@@ -16,7 +16,8 @@
         <div class="flex-container jc-between">
             <ul class="steps-list flex">
                 <li class="item active">
-                    <span class="step-icon">1</span>
+                    <a href="choose-flavor.html"><span class="step-icon">1</span></a>
+                    
                     <!-- <p class="step-title">Запахи</p> -->
                 </li>
 
@@ -219,11 +220,13 @@
         </div>
     </main>
 
-    <div class="container">
-        <!-- <div class="footer-buttons"> -->
-                <button class="btn-reset btn-link btn-prev">Подобрать ещё</button>
-            <!-- </div> -->
+    <footer class="footer">
+        <div class="footer-buttons">
+            <a class="btn-reset btn-link btn-prev" href="choose-flavor.html">Подобрать ещё</a>
+            <!-- <button class="btn-reset btn-link btn-prev">Подобрать ещё</button> -->
+            <!-- <a class="btn-link btn-ouline-primary btn-next" href="checkout.html">Купить</a> -->
         </div>
+    </footer>
 
     <script src="dist/bundle.js"></script>
 </body>
