--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            <button class="btn-dark btn-xl features__btn">Создать аромат</button>
+            <a href="choose-flavor.html" class="btn-dark btn-xl features__btn">Создать аромат</a>
         </div>
     </div>
 
@@ -274,7 +274,9 @@
                 </li>
             </ul>
 
-            <a class="btn-link btn-dark home__btn">Подбери свой аромат для дома</a>
+            <a class="btn-link btn-dark home__btn" href="choose-flavor.html">
+                Подбери свой аромат для дома
+            </a>
 
             <button class="btn-reset text-link" type="button" id="btn-features">Особенности ароматов</button>
        </div>
