fix overlay, fix product-details, cursor transition

--- a/choose-flavor.html
+++ b/choose-flavor.html
@@ -300,7 +300,7 @@
         <div class="footer-buttons">
             <button class="btn-reset btn-link btn-prev hide">Назад</button>
             <button class="btn-reset btn-link btn-restart hide">Подобрать ещё</button>
-            <a class="btn-link btn-ouline-primary btn-next" href="choose-form.html">Продолжить</a>
+            <a class="btn-link btn-ouline-primary btn-next btn-fill" href="choose-form.html" disabled>Продолжить</a>
         </div>
     </footer>
     
