--- a/choose-form.html
+++ b/choose-form.html
@@ -57,7 +57,9 @@
         </div>
     </header>
 
+   
     <div class="step">
+        
         <div class="container--step flex flex-row-reverse">
             <div class="order-preview">
                 <div class="order-preview__img">
@@ -150,7 +152,7 @@
                         <p class="card__title h5">Черный инжир</p>
                     </div>
 
-                    <div class="card design yellow">
+                    <div class="card design yellow" data-image="src/images/backgrounds/form-bg.jpg">
                         <div class="card__img">
                             <img src="src/images/forms/forms-3.jpg" alt="">
                             <span class="icon-detail">
@@ -222,9 +224,9 @@
 
     <footer class="footer">
         <div class="footer-buttons">
-            <a class="btn-reset btn-link btn-prev" href="choose-flavor.html">Назад</a>
+            <a class="btn-reset btn-link btn-prev btn-fill" href="choose-flavor.html">Назад</a>
             <button class="btn-reset btn-link btn-restart hide">Подобрать ещё</button>
-            <a class="btn-link btn-ouline-primary btn-next" href="choose-size.html">Продолжить</a>
+            <a class="btn-link btn-ouline-primary btn-next btn-fill" href="choose-size.html">Продолжить</a>
         </div>
     </footer>
     
