--- a/choose-packaging.html
+++ b/choose-packaging.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
 
-                    <div class="card--text">
+                    <div class="card--text" data-image="src/images/packaging/bottle-200.jpg">
                         <div class="card__header">
                             <p class="h4 header__title">250 мл</p>
                             <p class="header__subtitle">Испаряется от 6 до 15 мес</p>
@@ -161,9 +161,9 @@
 
         <footer class="footer">
             <div class="footer-buttons">
-                <a class="btn-reset btn-link btn-prev" href="choose-flavor.html">Подобрать ещё</a>
+                <a class="btn-reset btn-link btn-prev btn-fill" href="choose-flavor.html">Подобрать ещё</a>
                 <!-- <button class="btn-reset btn-link btn-prev">Подобрать ещё</button> -->
-                <a class="btn-link btn-ouline-primary btn-next" href="checkout.html">Купить</a>
+                <a class="btn-link btn-ouline-primary btn-next btn-fill" href="checkout.html">Купить</a>
             </div>
         </footer>
     </div>
