--- a/choose-size.html
+++ b/choose-size.html
@@ -154,9 +154,9 @@
 
         <footer class="footer">
             <div class="footer-buttons">
-                <a class="btn-reset btn-link btn-prev" href="choose-form.html">Назад</a>
+                <a class="btn-reset btn-link btn-prev btn-fill" href="choose-form.html">Назад</a>
                 <button class="btn-reset btn-link btn-restart hide">Подобрать ещё</button>
-                <a class="btn-link btn-ouline-primary btn-next" href="choose-packaging.html">Продолжить</a>
+                <a class="btn-link btn-ouline-primary btn-next btn-fill" href="choose-packaging.html">Продолжить</a>
             </div>
         </footer>
     </div>
