--- a/choose-size.html
+++ b/choose-size.html
@@ -50,7 +50,8 @@
         <div class="container--step flex flex-row-reverse">
             <div class="order-preview">
                 <div class="order-preview__img">
-                    <img src="src/images/backgrounds/size-background.jpg" alt="">
+                    <img src="src/images/backgrounds/size-background.jpg" class="product-image" alt="">
+                    <span class="zoom"><img src="src/images/icons/zoom.svg" alt=""></span>
                 </div>
 
                 <div class="order-preview__summary">
@@ -73,7 +74,7 @@
                         
                         <li class="item">
                             <span class="btn-round btn-round--sm">3</span>
-                            <p class="item-title"><span class="label">Объем:</span></p>
+                            <p class="item-title"><span class="label">Объем:</span>250мл</p>
 
                             <p class="item-price ml-auto">0 грн</p>
                         </li>
@@ -158,10 +159,16 @@
                 <button class="btn-reset btn-link btn-restart hide">Подобрать ещё</button>
                 <a class="btn-link btn-ouline-primary btn-next btn-fill" href="choose-packaging.html">Продолжить</a>
             </div>
+
+            <div class="product-preview__controls hide">
+                <button class="btn-reset btn-link btn-prev" id="btnZoomOff">Назад</button>
+            </div>
         </footer>
     </div>
 
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <script src="src/javascript/libraries/isotope/cell-by-column.js"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
