mobile deburring in progress

--- a/cart.html
+++ b/cart.html
@@ -97,7 +97,7 @@
 
         <ul class="link-list">
             <li class="item">
-                <a href="#" class="item-link red">Удалить</a>
+                <a href="#" class="item-link red-star">Удалить</a>
             </li>
 
             <li class="item">
