--- a/choose-size.html
+++ b/choose-size.html
@@ -104,7 +104,7 @@
                         </div>
                     </div>
 
-                    <div class="card--text">
+                    <div class="card--text" data-image="https://ae01.alicdn.com/kf/H00757bc1ee8543d8b1c2896ac12b1cb5T/50ml-Glass-Bottles-Reed-Diffuser-Sticks-Air-Fresher-Essential-Oil-Flameless-Aromatherapy-Home-Fragrance-Perfume-Set.jpg_q50.jpg">
                         <div class="card__header">
                             <p class="h4 header__title">250 мл</p>
                             <p class="header__subtitle">Испаряется от 6 до 15 мес</p>
