--- a/thanks.html
+++ b/thanks.html
@@ -255,12 +255,21 @@
                         <p class="price__quantity">1200 грн</p>
                     </div>
 
-                    <div class="select-wrapper">
-                        <select class="form-select">
-                            <option value="16">16 мл</option>
-                            <option value="50">50 мл</option>
-                            <option value="100">100 мл</option>
-                        </select>
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
                     </div>
 
                     <button class="btn-dark w-100 card__btn-buy">Купить</button>
@@ -283,12 +292,21 @@
                         <p class="price__quantity">1200 грн</p>
                     </div>
 
-                    <div class="select-wrapper">
-                        <select class="form-select">
-                            <option value="16">16 мл</option>
-                            <option value="50">50 мл</option>
-                            <option value="100">100 мл</option>
-                        </select>
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
                     </div>
 
                     <button class="btn-dark w-100 card__btn-buy">Купить</button>
@@ -311,12 +329,21 @@
                         <p class="price__quantity">1200 грн</p>
                     </div>
 
-                    <div class="select-wrapper">
-                        <select class="form-select">
-                            <option value="16">16 мл</option>
-                            <option value="50">50 мл</option>
-                            <option value="100">100 мл</option>
-                        </select>
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
                     </div>
 
                     <button class="btn-dark w-100 card__btn-buy">Купить</button>
@@ -339,12 +366,21 @@
                         <p class="price__quantity">1200 грн</p>
                     </div>
 
-                    <div class="select-wrapper">
-                        <select class="form-select">
-                            <option value="16">16 мл</option>
-                            <option value="50">50 мл</option>
-                            <option value="100">100 мл</option>
-                        </select>
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
                     </div>
 
                     <button class="btn-dark w-100 card__btn-buy">Купить</button>
@@ -367,12 +403,21 @@
                         <p class="price__quantity">1200 грн</p>
                     </div>
 
-                    <div class="select-wrapper">
-                        <select class="form-select">
-                            <option value="16">16 мл</option>
-                            <option value="50">50 мл</option>
-                            <option value="100">100 мл</option>
-                        </select>
+                    <div class="custom-select custom-select--card">
+                        <div class="select-arrow">
+                            <div class="line--dark"></div>
+                            <div class="line--dark"></div>
+                        </div>
+
+                        <input type="text" class="custom-celect__input" placeholder="16 мл" readonly>
+                        <div class="custom-select__options">
+                            <ul class="option__items">
+                                <li class="item">16 мл</li>
+                                <li class="item">50 мл</li>
+                                <li class="item">100 мл</li>
+                                <li class="item">250 мл</li>
+                            </ul>
+                        </div>
                     </div>
 
                     <button class="btn-dark w-100 card__btn-buy">Купить</button>
